--- a/src/App.css
+++ b/src/App.css
@@ -42,6 +42,7 @@ body {
 
 .socialmediaicons i{
   font-size:2em;
+  text-align: center !important;
 }
 
 a{
@@ -58,12 +59,7 @@ h2{
 }
 
 .timer div:nth-child(2) {
-  border: 1px solid #fff;
-  border-radius: 3px;
-  display: grid;
-  grid-template-columns: repeat(7,1fr);
-  margin-top: 3em;
-  padding: 3em;
+
   text-align: center;
 }
 
